# DSM-Project

./: .gitignore  CSE271_Report_Final.docx  HZ_WH_1Wrangling.ipynb  HZ_WH_2Modeling.ipynb  HZ_WH_3Analysis.ipynb  HZ_WH_Modeling.ipynb  HZ_WH_Wrangling.ipynb  HZ_WH_helper_functions.py  HZ_req.txt  README.md  crimes_cleaning.ipynb  crimes_final.ipynb  oad_big_five.ipynb  oad_big_five_cleaning.ipynb  oad_req.txt  pyproject.toml  req.txt  requirements.txt
Dashboards/: dashboard.py  requirements
Dashboards/pages/: Automating_dashboard.py  WH_dashboard.py  big5_dashboard.py  crimes_dashboard.py
Datasets/: cleaned_big5_totals.csv
cleaned-datasets/: HZ_WH_data.csv  README.md  cleaned_big5_totals.csv
datasets/: spotify-2023.csv  synthetic_heart_disease_risk_dataset-2.csv
drafts/: README.md
drafts/datasets/: Classic-Car-Database-by-Teoalida-SAMPLE.xlsx  README.md  countryStats.csv  wdi_raw.csv  wgi_raw.csv
drafts/documentation/: oad_big5_docs.md  oad_big5_hypothesis testing.md  oad_zd_heart_disease.md
plots/: README.md
