[project]
name = "DSM-Final-Project"
version = "0.1.0"
description = "A final project for the data science methodology subject offered at eui in spring 2026"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imbalanced-learn>=0.12.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.45.0",
]
